--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,76 @@
-Django==1.3
+Brlapi==0.5.5
+BzrTools==2.3.1
+CouchDB==0.8
+GnuPGInterface==0.3.2
+Jinja2==2.5.5
+Mako==0.3.6
+MarkupSafe==0.9.2
+MySQL-python==1.2.2
+PAM==0.4.2
+PIL==1.1.7
 Pygments==1.4
-South==0.7.3
-amqplib==0.6.1
-anyjson==0.3.1
-celery==2.2.7
-django-celery==2.2.4
-django-picklefield==0.1.9
-kombu==1.1.6
-mercurial==1.9
-paramiko==1.7.7.1
-pycrypto==2.3
-pyparsing==1.5.6
-python-dateutil==1.5
+Sphinx==1.0.1
+Twisted-Core==10.2.0
+Twisted-Names==10.1.0
+Twisted-Web==10.2.0
+apt-xapian-index==0.41
+argparse==1.1
+bzr==2.3.1
+bzr-dbus==0.1-
+bzr-gtk==0.100.0
+chardet==2.0.1
+command-not-found==0.1
+compizconfig-python==0.9.4
+configglue==0.9pre1
+configobj==4.7.2
+cssutils==0.9.7b2
+defer==1.0.2
+distribute==0.6.19
+docutils==0.7
+dulwich==0.7.0
+fastimport==0.9.0dev0
+foolscap==0.6.1
+gnome-app-install==0.4.7ubuntu3
+httplib2==0.6.0
+ipython==0.10.1
+keyring==0.5.1
+launchpadlib==1.9.7
+lazr.restfulclient==0.11.1
+lazr.uri==1.0.2
+louis==2.0.0
+lxml==2.3
+mercurial==1.7.5
+nvidia-common==0.0.0
+oauth==1.0a
+papyon==0.5.5
+paramiko==1.7.6
+pexpect==2.3
+piston-mini-client==0.3
+pocketlint==0.5.13
+protobuf==2.3.0
+pyOpenSSL==0.10
+pycrypto==2.1.0
+pycups==1.9.54
+pycurl==7.19.0
+pyinotify==0.8.9
+pyserial==2.5
+pysmbc==1.0.10
+python-apt==0.7.100.3ubuntu6.1
+python-debian==0.1.18ubuntu2
+python-virtkey==0.60.0
+pyxdg==0.19
+rdflib==2.4.2
+screen-resolution-extra==0.0.0
+sessioninstaller==0.0.0
+simplejson==2.1.2
+ubuntuone-storage-protocol==1.6.1
+ufw==0.30.1-1ubuntu1
+usb-creator==0.2.23
+virtualenv==1.4.9
+virtualenvwrapper==2.2.2
+wadllib==1.1.8
 wsgiref==0.1.2
-yolk==0.4.1
+wxPython==2.8.11.0
+wxPython-common==2.8.11.0
+xkit==0.0.0
+zope.interface==3.6.1
